# gncore

./: .gitignore  .gn  BUILD.gn  LICENSE  README.md
gncore/: BUILD.gn  BUILDCONFIG.gn  toolchain.gni
gncore/scripts/: invoke.py
hooks/: pre-commit.sh  setup.sh
test/: BUILD.gn
test/src/: BUILD.gn  standalone.cc
test/tc/: BUILD.gn
